<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bgdpic4"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TimerText"
        android:id="@+id/TimerTextView"
        android:layout_alignParentTop="false"
        android:layout_marginTop="108dp"
        android:layout_toStartOf="@+id/TotalTapCount"
        android:layout_alignRight="@+id/TotalTapCount"
        android:layout_alignEnd="@+id/TotalTapCount" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:id="@+id/button"
        android:layout_below="@+id/CorrectTapsCountCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TotalTapCount"
        android:id="@+id/TotalTapCount"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/TimerTextView"
        android:layout_toRightOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TotalTapCountCaption"
        android:id="@+id/textView1"
        android:layout_alignTop="@+id/TotalTapCount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CorrectTapCountCaption"
        android:id="@+id/CorrectTapsCountCaption"
        android:layout_marginTop="106dp"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/CorrectTapCount"
        android:id="@+id/CorrectTapCount"
        android:layout_alignTop="@+id/CorrectTapsCountCaption"
        android:layout_alignLeft="@+id/TotalTapCount"
        android:layout_alignStart="@+id/TotalTapCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TotalBeepsCaption"
        android:id="@+id/TotalBeepsCaption"
        android:layout_above="@+id/TotalTapCount"
        android:layout_toStartOf="@+id/button"
        android:layout_alignRight="@+id/CorrectTapsCountCaption"
        android:layout_alignEnd="@+id/CorrectTapsCountCaption" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ResultMessage"
        android:id="@+id/ResultMessage"
        android:textColor="#23ac1e"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.example.vijayshankar.vijayapptimer2.SetupFragment"
        android:id="@+id/fragment"
        tools:layout="@layout/setup_fragment"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
