<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetupOKButton"
        android:id="@+id/SetupOKButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/setupTimer"
        android:layout_alignBottom="@+id/SetupOKButton"
        android:layout_toLeftOf="@+id/SetupOKButton"
        android:elegantTextHeight="true"
        android:layout_gravity="center"
        android:enabled="true"
        android:maxHeight="3dp"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#3f9eff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SetupTouchTimerCaption"
        android:id="@+id/SetupTouchTimerCaption"
        android:layout_gravity="center"
        android:layout_alignBottom="@+id/SetupOKButton"
        android:layout_toLeftOf="@+id/setupTimer"
        android:layout_toStartOf="@+id/setupTimer"
        android:textColor="#010101" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Duration"
        android:id="@+id/TotalTime"
        android:layout_gravity="center"
        android:textColor="#010101"
        android:layout_alignTop="@+id/SetupTouchTimerCaption"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/Duration"
        android:layout_alignTop="@+id/setupTimer"
        android:layout_toRightOf="@+id/TotalTime"
        android:inputType="number"
        android:ems="3"

        android:elegantTextHeight="true"
        android:enabled="true"
        android:maxHeight="3dp"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#3f9eff"/>
</RelativeLayout>